--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+title: Gourimahapatra AI Portfolio
+description: AI | Data | Azure | Databricks
 theme: jekyll-theme-cayman
 github:
   is_project_page: false
